...
    <string name="shipping_billing_title">"shipping and billing"</string>
    <string name="shop_web_payment_toolbar_title">"Checkout"</string>
    <string name="frequency_card_title">"Frequency chart"</string>
    <string name="dialog_test_brushing_body">"Before you embark on your rewarding (literally) journey to better oral health, it’s important to see how you’re brushing naturally."</string>

...
    <string name="test_brushing_start_brushing_highlight">"."</string>
    <string name="orphan_brushings_delete_title">"Are you sure?"</string>
    <string name="orphan_brushings_delete_message">"Do you really want to delete these brushings? This action is irreversible."</string>
    <string name="um_no">"No"</string>
    <string name="um_yes">"Yes"</string>
    <string name="last_brushing_card_brushing_description">"%s %s at %s"</string>
    <string name="last_brushing_card_offline_brushing">"Offline brushing"</string>
...
    <string name="activities_task_angle_title">"Adjust your angles"</string>
    <string name="activities_task_angle_description">"Angle to fight plaque and brush your best."</string>
    <plurals name="earning_points_subtitle">
        <item quantity="one">"You earn %1$d point every time you brush."</item>
        <item quantity="other">"You earn %1$d points every time you brush."</item>
    </plurals>
    <string name="last_brushing_card_no_brushing">"No brushing session recorded"</string>
    <string name="profile_stats_card_current_points">"%d current points"</string>
    <string name="profile_stats_card_keep_earning_points">"Keep earning points and save more!"</string>
...
    <string name="onboarding_sign_up_consent_terms_conditions_link">"terms &amp; conditions"</string>
    <string name="home_toolbar_title_format">"Hi %1$s"</string>
    <string name="earning_points_detail_body"><![CDATA[<p>Each time you brush, you receive at least 1 smile point. You can have 3 eligible brushing sessions a day. Earn more smile points by completing activities and challenges. </p>

<p>Use the Shop in the app to redeem your smile points for rewards.*</p>
...
    <string name="activities_guided_brushing_description">"The best way to get results."</string>
    <string name="activities_guided_brushing_points">"+2 points"</string>
    <string name="home_screen_smile_points">"smile points"</string>
    <string name="profile_header_text">"Use your smile to change the world,
don’t let the world change your smile!"</string>
...
    <string name="pairing_scan_toothbrush_title">"Connect your toothbrush"</string>
    <string name="pairing_scan_toothbrush_description">"Searching for nearby toothbrushes"</string>
    <string name="earning_points_title">"earning smile points"</string>
    <string name="earning_points_detail_title">"HOW TO EARN &amp; REDEEM"</string>
    <string name="last_brushing_card_title">"my brushing sessions"</string>
    <string name="last_brushing_card_coverage">"Coverage"</string>
    <string name="last_brushing_card_duration">"Duration"</string>
    <string name="last_brushing_delete_button">"Delete brushing session"</string>
    <string name="profile_stats_card_offline_label">"Without using the app"</string>
...
    <string name="pairing_blink_toothbrush_led">"Blink"</string>
    <string name="settings_item_logout">"Log out"</string>
    <string name="checkup_coverage">"Coverage"</string>
    <string name="checkup_duration">"Duration"</string>
    <string name="checkup_no_mouthmap_data">"Start brushing to see your results."</string>
    <string name="checkup_mouth_map_left">"L"</string>
...
    <!-- Displayed inside earn_points_celebration_body -->
    <string name="earn_points_celebration_complete_profile_name">"complete your profile"</string>
    <string name="product_support_card_title">"product questions"</string>
    <string name="product_support_card_subtitle">"Check our customers support center for common questions."</string>
    <string name="smiles_history_empty">"No smile points history yet. Win and synchronize your smile points to see the events."</string>
    <string name="oral_care_support_title">"oral care questions"</string>
    <string name="oral_care_support_subtitle">"Check our oral health care center for common questions."</string>
    <string name="settings_about_screen_licenses">"Licenses"</string>
    <string name="home_screen_no_internet">"no internet…"</string>
...
