...
    <variable
      name="viewModel"
      type="com.kolibree.android.app.ui.home.tab.home.HomeFragmentViewModel" />
  </data>

  <androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/home_tab"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.kolibree.android.app.ui.widget.ShadeView
      android:id="@+id/shade_view"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:backgroundScrim="?colorPrimary"
      app:shadeExpandedHeight="@dimen/dot_oct" />

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/content_recyclerview"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:descendantFocusability="blocksDescendants"
      app:adapter="@{viewModel.cardHostViewModel.adapter}"
      app:diffConfig="@{viewModel.cardHostViewModel.diffConfig}"
      app:itemBinding="@{viewModel.cardHostViewModel.cardsBinding}"
      app:items="@{viewModel.cardHostViewModel.cards}"
      app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
      app:layout_behavior="@string/appbar_scrolling_view_behavior"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/smiles_background" />

    <com.google.android.material.appbar.AppBarLayout
      android:id="@+id/appbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:clipChildren="false"
...
            android:paddingStart="@dimen/dot_double"
            android:paddingTop="@dimen/dot_half"
            android:paddingEnd="@dimen/dot_double"
            android:paddingBottom="@dimen/dot_half"
            android:textAppearance="?textAppearanceSubtitle2"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/smiles_value"
            app:layout_constraintEnd_toEndOf="@id/smiles_value"
            app:layout_constraintStart_toStartOf="@id/smiles_value"
            app:speechBubbleAnimation="@{viewModel.speechBubbleAnimation}"
            app:speechBubbleCornerFraction="@{0.5f}"
            app:speechBubbleShape="@{ContextExtensionsKt.getColorFromAttr(context, R.attr.colorTertiaryLight)}"
            app:speechBubbleStemSize="@{@dimen/dot_half}" />
...
            app:layout_constraintStart_toStartOf="@id/smiles_value"
            app:layout_constraintTop_toTopOf="@id/smiles_value"
            app:noInternet="@{viewModel.noInternetAnimation}"
            app:noInternetDuration="@{@android:integer/config_mediumAnimTime}" />

          <TextView
            android:id="@+id/smiles_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_screen_smile_points"
            android:textAllCaps="true"
            android:textAppearance="?textAppearanceSubtitle2"
            android:textColor="?colorOnPrimary"
...
