...

    <import type="com.kolibree.android.homeui.hum.R" />

  </data>

  <LinearLayout
    android:id="@+id/last_brushing_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dot_double"
    android:background="?backgroundColor"
    android:elevation="@dimen/dot_quarter"
    android:orientation="vertical"
...
              app:layout_constraintTop_toBottomOf="@id/sync_progress_bar" />

            <View
              android:layout_width="@dimen/match_constraints"
              android:layout_height="@dimen/divider_thickness"
              android:layout_marginTop="@dimen/dot_double"
              android:background="@color/divider"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@id/sync_progress_text" />
          </androidx.constraintlayout.widget.ConstraintLayout>

          <LinearLayout
...
              android:layout_marginStart="@dimen/dot_double"
              android:text="@string/last_brushing_card_duration" />

          </LinearLayout>

          <com.kolibree.android.app.ui.home.tab.home.card.lastbrushing.view.BrushingTopSectionView
            android:id="@+id/brushing_top_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dot_double"
            android:layout_marginBottom="@dimen/dot"
            app:cardItems="@{item.data.items}"
            app:interaction="@{interaction}"
...
            showData="@{item.showData(item.data.selectedItem)}"
            android:layout_width="match_parent"
            android:layout_height="@dimen/last_brushing_mouthmap_height"
            android:layout_marginBottom="@dimen/dot" />

          <Button
            android:id="@+id/last_brushing_card_delete_button"
            style="?materialButtonIconStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dot_trip"
            android:layout_marginEnd="@dimen/dot_trip"
            android:layout_marginBottom="@dimen/dot_double"
...
