...

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="@dimen/last_brushing_card_width"
    android:layout_height="wrap_content">

    <com.kolibree.android.app.ui.home.tab.view.CoverageDurationProgressView
      android:id="@+id/coverage_duration_progress"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/dot_double"
      app:coverage="@{item.coverage}"
      app:durationPercentage="@{item.durationPercentage}"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/day"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/dot_half"
      android:text="@{item.dayOfWeek}"
      android:textAppearance="?textAppearanceCaption"
      android:textColor="?android:textColorSecondary"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/coverage_duration_progress"
      tools:text="Mon PM" />

    <TextView
      android:id="@+id/date"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@{item.day}"
      android:textAppearance="?textAppearanceSubtitle2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
...
